@@ -121,6 +121,7 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Make progress bars’ progress visible in forced colors mode (Anuja Verma)
  * Make checkboxes visible in forced colors mode (Anuja Verma)
  * Display the correct color for icons in forced colors mode (Anuja Verma)
+ * Remove outdated reference to 30-character limit on usernames in help text (minusf)
 
 
 ## Upgrade considerations
